mux-compiler/tests/snapshots/executable_integration__executable_integration__non_exhaustive_match.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Non-exhaustive match: patterns not covering all variants of 'Status'. Missing: Active
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/non_exhaustive_match.mux:11:11
   |
11 |     match status {
   |           ^^^^^^
